--- a/estilos.scss
+++ b/estilos.scss
@@ -1,3 +1,20 @@
+// VARIABLES
+
+$color1:#2eff00;
+$color2:#3b5999;
+$color3:#e4405f;
+$color4:#666666;
+$color5:#4dc247;
+
+$font1: 'Roboto Cn', sans-serif;
+$font2: 'Courier New', Courier, monospace;
+
+// Animaciones
+@keyframes slideIn{
+    from{}
+    to{transform: translateX(0);}
+}
+
 // Estilos globales
 *{
     padding: 0;
@@ -20,8 +37,108 @@
 .header{
     grid-area: "header";
     width: 100%;
-    height: 200px;
-    background-color: chartreuse;
+    background-color: white;
+}
+
+nav{
+    height: 100px;
+    line-height: 50px;
+    text-transform: uppercase;
+    font-family: $font1;
+    display: grid;
+    grid-template-columns: auto 1fr 1fr auto;
+    grid-template-rows: 1fr;
+    grid-auto-columns: 1fr;
+    gap: 0;
+    grid-auto-flow: row;
+    grid-template-areas: "logo" "nav--visible" "nav--registro" "carrito";
+        h1 a{
+        text-decoration: none;
+        }
+}
+
+.logo{
+    background-color: #666666;
+    display: flex;
+}
+
+.nav--visible{
+    background-color: #e4405f;
+}
+
+.nav--registro{
+    background-color: aqua;
+}
+
+.carrito{
+    background-color: blueviolet;
+}
+
+.icono{
+    height: 50px;
+    transform: translateY(-100rem);
+    animation: slideIn 1s forwards;
+}
+
+.nombre{
+    font-size: 1.653rem;
+    font-weight: bold;
+    text-align: center;
+    transform: translateY(-100rem);
+    animation: slideIn 1s forwards;
+    a{
+        color: black;
+    }
+}
+
+.navbar{
+    display: flex;
+    li{
+    list-style: none;
+    transform: translateX(100rem);
+    animation: slideIn .5s forwards;
+        &:nth-child(1){animation-delay: 0s;}
+        &:nth-child(2){animation-delay: .5s;}
+        &:nth-child(3){animation-delay: 1s;}
+        &:nth-child(4){animation-delay: 1.5s;}
+        &:nth-child(5){animation-delay: 2s;}
+    }
+}
+        
+.navbar a{
+    padding: 1rem 0;
+    margin: 0 3rem;
+    position: relative;
+    letter-spacing: 0.125rem;
+    text-decoration: none;
+        &:hover{
+        text-decoration: none;
+        color: black;
+            &::before, &::after{
+            transform: scaleX(1);
+            }
+        }
+        &:last-child{
+        margin-right: 0;
+        }
+        &::before, &::after{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 0.031rem;
+        background-color: $color2;
+        left: 0;
+        transform: scaleX(0);
+        transition: all .5s;
+        }
+        &::before{
+        top: 0;
+        transform-origin: left;
+        }
+        &::after {
+        bottom: 0;
+        transform-origin: right;
+        }
 }
 
 // MAIN
