--- a/estilos.scss
+++ b/estilos.scss
@@ -41,8 +41,9 @@ $font2: 'Courier New', Courier, monospace;
 }
 
 nav{
-    height: 100px;
-    line-height: 50px;
+    padding-top: 1.25rem;
+    padding-left: 0.625rem;
+    padding-right: 0.625rem;
     text-transform: uppercase;
     font-family: $font1;
     display: grid;
@@ -58,20 +59,26 @@ nav{
 }
 
 .logo{
+    grid-area: "logo";
     background-color: #666666;
     display: flex;
 }
 
 .nav--visible{
+    grid-area: "nav--visible";
     background-color: #e4405f;
 }
 
 .nav--registro{
+    grid-area: "nav--registro";
     background-color: aqua;
 }
 
 .carrito{
+    grid-area: "carrito";
     background-color: blueviolet;
+    font-size: 30px;
+    padding: 10px;
 }
 
 .icono{
@@ -82,8 +89,7 @@ nav{
 
 .nombre{
     font-size: 1.653rem;
-    font-weight: bold;
-    text-align: center;
+    line-height: 50px;
     transform: translateY(-100rem);
     animation: slideIn 1s forwards;
     a{
@@ -93,6 +99,7 @@ nav{
 
 .navbar{
     display: flex;
+    line-height: 50px;
     li{
     list-style: none;
     transform: translateX(100rem);
