--- a/estilos.css
+++ b/estilos.css
@@ -7,6 +7,10 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: #000;
+}
+* a {
+  text-decoration: none;
 }
 
 .grid--container {
@@ -22,48 +26,20 @@
 .header {
   grid-area: "header";
   width: 100%;
-  background-color: white;
+  background-color: #e48f65;
+  font-family: "Roboto Cn", sans-serif;
 }
 
-nav {
-  padding-top: 1.25rem;
-  padding-left: 0.625rem;
-  padding-right: 0.625rem;
+.header--logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 10%;
   text-transform: uppercase;
-  font-family: "Roboto Cn", sans-serif;
-  display: grid;
-  grid-template-columns: auto 1fr 1fr auto;
-  grid-template-rows: 1fr;
-  grid-auto-columns: 1fr;
-  gap: 0;
-  grid-auto-flow: row;
-  grid-template-areas: "logo" "nav--visible" "nav--registro" "carrito";
-}
-nav h1 a {
-  text-decoration: none;
 }
 
 .logo {
-  grid-area: "logo";
-  background-color: #666666;
   display: flex;
-}
-
-.nav--visible {
-  grid-area: "nav--visible";
-  background-color: #e4405f;
-}
-
-.nav--registro {
-  grid-area: "nav--registro";
-  background-color: aqua;
-}
-
-.carrito {
-  grid-area: "carrito";
-  background-color: blueviolet;
-  font-size: 30px;
-  padding: 10px;
 }
 
 .icono {
@@ -78,67 +54,115 @@ nav h1 a {
   transform: translateY(-100rem);
   animation: slideIn 1s forwards;
 }
-.nombre a {
-  color: black;
+.nombre span {
+  color: #8f4646;
 }
-
-.navbar {
-  display: flex;
-  line-height: 50px;
-}
-.navbar li {
-  list-style: none;
-  transform: translateX(100rem);
-  animation: slideIn 0.5s forwards;
-}
-.navbar li:nth-child(1) {
-  animation-delay: 0s;
-}
-.navbar li:nth-child(2) {
-  animation-delay: 0.5s;
-}
-.navbar li:nth-child(3) {
-  animation-delay: 1s;
-}
-.navbar li:nth-child(4) {
-  animation-delay: 1.5s;
-}
-.navbar li:nth-child(5) {
-  animation-delay: 2s;
-}
-
-.navbar a {
-  padding: 1rem 0;
-  margin: 0 3rem;
-  position: relative;
-  letter-spacing: 0.125rem;
-  text-decoration: none;
-}
-.navbar a:hover {
-  text-decoration: none;
-  color: black;
-}
-.navbar a:hover::before, .navbar a:hover::after {
+.nombre:hover::before, .nombre:hover::after {
   transform: scaleX(1);
 }
-.navbar a:last-child {
-  margin-right: 0;
-}
-.navbar a::before, .navbar a::after {
+.nombre::before, .nombre::after {
   content: "";
   position: absolute;
   width: 100%;
   height: 0.031rem;
-  background-color: #3b5999;
+  background-color: #8f4646;
   left: 0;
   transform: scaleX(0);
   transition: all 0.5s;
 }
-.navbar a::before {
+.nombre::before {
   top: 0;
   transform-origin: left;
 }
-.navbar a::after {
+.nombre::after {
+  bottom: 0;
+  transform-origin: left;
+}
+
+.carrito {
+  font-size: 2.25rem;
+  padding: 10px;
+  transform: translateY(-100rem);
+  animation: slideIn 1s forwards;
+}
+
+.header--nav {
+  display: flex;
+  background-color: #ec9c75;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 2%;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
+
+.nav--visible {
+  display: flex;
+}
+.nav--visible li {
+  list-style: none;
+  transform: translateX(-100rem);
+  animation: slideIn 0.5s forwards;
+}
+.nav--visible li:nth-child(1) {
+  animation-delay: 0s;
+}
+.nav--visible li:nth-child(2) {
+  animation-delay: 0.5s;
+}
+.nav--visible li:nth-child(3) {
+  animation-delay: 1s;
+}
+.nav--visible li:nth-child(4) {
+  animation-delay: 1.5s;
+}
+
+.nav--registro {
+  display: flex;
+}
+.nav--registro li {
+  list-style: none;
+  transform: translateX(100rem);
+  animation: slideIn 0.5s forwards;
+}
+.nav--registro li:nth-child(1) {
+  animation-delay: 0s;
+}
+.nav--registro li:nth-child(2) {
+  animation-delay: 0.5s;
+}
+.nav--registro li:nth-child(3) {
+  animation-delay: 1s;
+}
+
+.nav--visible li a, .nav--registro li a {
+  padding: 1rem 0;
+  margin: 0 3rem;
+  position: relative;
+  letter-spacing: 0.125rem;
+}
+.nav--visible li a:hover, .nav--registro li a:hover {
+  font-weight: bold;
+  color: #8f4646;
+  transition: all 0.5s;
+}
+.nav--visible li a:hover::before, .nav--visible li a:hover::after, .nav--registro li a:hover::before, .nav--registro li a:hover::after {
+  transform: scaleX(1);
+}
+.nav--visible li a::before, .nav--visible li a::after, .nav--registro li a::before, .nav--registro li a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.031rem;
+  background-color: #8f4646;
+  left: 0;
+  transform: scaleX(0);
+  transition: all 0.5s;
+}
+.nav--visible li a::before, .nav--registro li a::before {
+  top: 0;
+  transform-origin: left;
+}
+.nav--visible li a::after, .nav--registro li a::after {
   bottom: 0;
   transform-origin: right;
 }
