--- a/estilos.css
+++ b/estilos.css
@@ -177,8 +177,62 @@
 .footer {
   grid-area: "main";
   width: 100%;
-  height: 200px;
-  background-color: aqua;
+  height: auto;
+  background-color: #e48f65;
+  padding: 40px 0;
+}
+
+.social {
+  text-align: center;
+  padding-bottom: 25px;
+  color: #4b4c4d;
+}
+.social a {
+  font-size: 24px;
+  color: inherit;
+  border: 2px solid white;
+  width: 40px;
+  height: 40px;
+  line-height: 38px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 8px;
+  opacity: 0.7;
+}
+.social a:hover {
+  opacity: 1;
+  border-radius: 1rem 1rem 1rem 1rem;
+  background-color: white;
+  border: 1px solid black;
+}
+
+.nav--footer {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 20px;
+  line-height: 1.6;
+  text-align: center;
+}
+.nav--footer li {
+  display: inline-block;
+  padding: 0 15px;
+}
+.nav--footer a {
+  color: inherit;
+  opacity: 0.8;
+}
+.nav--footer a:hover {
+  opacity: 1;
+}
+
+.copyright {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 20pxpx;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=estilos.css.map */
