--- a/estilos.scss
+++ b/estilos.scss
@@ -95,8 +95,10 @@ $font2: 'Courier New', Courier, monospace;
 }
 
 .carrito{
-    font-size: 2.25rem;
+    font-size: 30px;
     padding: 10px;
+    border: 2px dashed black;
+    border-radius: 50%;
     transform: translateY(-100rem);
     animation: slideIn 1s forwards;
 }
@@ -134,7 +136,7 @@ $font2: 'Courier New', Courier, monospace;
         &:nth-child(3){animation-delay: 1s;}
     }
 }
-        
+
 .nav--visible li a, .nav--registro li a{
     padding: 1rem 0;
     margin: 0 3rem;
