--- a/estilos.scss
+++ b/estilos.scss
@@ -172,8 +172,56 @@ $font2: 'Courier New', Courier, monospace;
 .main{
     grid-area: "main";
     width: 100%;
-    height: 200px;
+    height: 800px;
     background-color: brown;
+}
+
+.banner{
+    width: 100%;
+    height: 800px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background: center fixed url(img/parallax.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.banner--descripcion{
+    width: 100%;
+    max-width: 1000px;
+    display: block;
+    margin: auto;
+    p{
+        margin: 2rem 0 3rem 0;
+        color: white;
+        font-size: 1.2rem;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+    a{
+        border: 2px solid rgba(255, 255, 255, 1);
+        padding: 0.6rem 3.5rem;
+        margin: auto;
+        opacity: 0.85;
+        color: white;
+        border-radius: 50px;
+        font-size: 0.9rem;
+        transform: all 1s ease-out;
+        &:hover{
+            background: white;
+            color: black;
+            opacity: 1;
+            box-shadow: 0rem 0.313rem 0.625rem 0.125rem rgba(0, 0, 0, 0.9);
+        }
+    }
+    h2{
+        font-size: 4.375rem;
+        font-style: italic;
+        font-weight: bold;
+        text-transform: uppercase;
+        color: white;
+    }
 }
 
 // FOOTER
