--- a/estilos.css
+++ b/estilos.css
@@ -86,6 +86,7 @@
   border-radius: 50%;
   transform: translateY(-100rem);
   animation: slideIn 1s forwards;
+  background-color: #ec9c75;
 }
 
 .header--nav {
@@ -172,13 +173,13 @@
 .main {
   grid-area: "main";
   width: 100%;
-  height: 800px;
-  background-color: brown;
+  height: auto;
+  background-color: #ecdcbe;
 }
 
 .banner {
   width: 100%;
-  height: 800px;
+  height: 700px;
   display: flex;
   align-items: center;
   text-align: center;
@@ -222,6 +223,116 @@
   font-weight: bold;
   text-transform: uppercase;
   color: white;
+}
+
+.tarjetas--contenedor {
+  display: grid;
+  grid-gap: 1.2rem;
+  grid-template-columns: repeat(3, auto);
+  padding: 1.25rem;
+}
+
+.tarjetas {
+  border: 1px solid black;
+  background-color: white;
+  text-align: center;
+  padding-top: 1.5rem;
+  margin-top: -125px;
+}
+.tarjetas i {
+  font-size: 3.125rem;
+  margin-bottom: 0.625rem;
+}
+.tarjetas h3 {
+  font-style: italic;
+  margin-top: 0.625rem;
+}
+.tarjetas p {
+  font-size: 1.25rem;
+  margin: 0.625rem;
+}
+
+.productos--contendor {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  padding: 0.5rem 7%;
+}
+
+.productos--titulo {
+  text-align: center;
+  font-size: 5rem;
+  padding: 1rem;
+}
+.productos--titulo span {
+  color: #4a7584;
+}
+
+.producto--ind {
+  flex: 1 1 20rem;
+  text-align: center;
+  padding: 1rem;
+  border: 0.1rem solid rgba(0, 0, 0, 0.3);
+  border-radius: 1.5rem;
+  overflow: hidden;
+  position: relative;
+  background-color: white;
+}
+.producto--ind img {
+  height: 200px;
+  width: 200px;
+}
+.producto--ind h3 {
+  color: black;
+  font-size: 2.5rem;
+}
+.producto--ind button {
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+  background: #ecdcbe;
+  color: #fff;
+  padding: 1rem;
+  font-size: 1.5rem;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 0.5rem;
+  outline: 2px solid #ecdcbe;
+  outline-offset: 2px;
+  transition: all 0.5s;
+}
+.producto--ind button:hover {
+  background-color: black;
+  color: white;
+  outline: black;
+}
+
+.producto--precios {
+  display: flex;
+  justify-content: center;
+  font-size: 2.5rem;
+  color: #333;
+  margin-top: 0.5rem;
+}
+
+.producto--cantidad {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.producto--cantidad span {
+  padding: 0 0.7rem;
+  font-size: 1.75rem;
+}
+.producto--cantidad input {
+  border: 0.1rem solid rgba(0, 0, 0, 0.3);
+  font-size: 1.5rem;
+  font-weight: bolder;
+  color: black;
+  padding: 0.5rem;
+  width: 5rem;
+  background: rgba(0, 0, 0, 0.05);
+  text-align: center;
 }
 
 .footer {
@@ -283,6 +394,21 @@
   text-align: center;
   font-size: 20pxpx;
   font-weight: bold;
+}
+
+@media screen and (max-width: 992px) {
+  .tarjetas--contenedor {
+    grid-template-columns: auto;
+    background-color: #253a42;
+  }
+
+  .tarjetas {
+    margin-top: 0px;
+  }
+
+  .tarjeta--a {
+    margin-top: -125px;
+  }
 }
 
 /*# sourceMappingURL=estilos.css.map */
