--- a/estilos.scss
+++ b/estilos.scss
@@ -5,6 +5,7 @@ $color2:#253a42;
 $color3:#ecdcbe;
 $color4:#8f4646;
 $color5:#4a7584;
+$color6:#ec9c75;
 
 $font1: 'Roboto Cn', sans-serif;
 $font2: 'Courier New', Courier, monospace;
@@ -101,11 +102,14 @@ $font2: 'Courier New', Courier, monospace;
     border-radius: 50%;
     transform: translateY(-100rem);
     animation: slideIn 1s forwards;
+    background-color: $color6;
 }
+
+// NAVBAR
 
 .header--nav{
     display: flex;
-    background-color: #ec9c75;
+    background-color: $color6;
     align-items: center;
     justify-content: space-between;
     padding: 2rem 2%;
@@ -172,13 +176,15 @@ $font2: 'Courier New', Courier, monospace;
 .main{
     grid-area: "main";
     width: 100%;
-    height: 800px;
-    background-color: brown;
+    height: auto;
+    background-color: $color3;
 }
+
+// BANNER-PARALLAX
 
 .banner{
     width: 100%;
-    height: 800px;
+    height: 700px;
     display: flex;
     align-items: center;
     text-align: center;
@@ -221,6 +227,118 @@ $font2: 'Courier New', Courier, monospace;
         font-weight: bold;
         text-transform: uppercase;
         color: white;
+    }
+}
+
+// TARJETAS
+
+.tarjetas--contenedor {
+    display: grid;
+    grid-gap: 1.2rem;
+    grid-template-columns: repeat(3, auto);
+    padding: 1.25rem;
+}
+
+.tarjetas {
+    border: 1px solid black;
+    // box-shadow: -1px 0 5px #0000001f;
+    background-color: white;
+    text-align: center;
+    padding-top: 1.5rem;
+    margin-top: -125px;
+    i{
+        font-size: 3.125rem;
+        margin-bottom: 0.625rem;
+    }
+    h3{
+        font-style: italic;
+        margin-top: 0.625rem;
+    }
+    p{
+        font-size: 1.25rem;
+        margin: 0.625rem;
+    }
+}
+
+// PRODUCTOS
+
+.productos--contendor{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding: 0.5rem 7%;
+}
+
+.productos--titulo{
+    text-align: center;
+    font-size: 5rem;
+    padding: 1rem;
+    span{
+        color: $color5;
+    }
+}
+
+.producto--ind{
+    flex: 1 1 20rem;
+    text-align: center;
+    padding: 1rem;
+    border: 0.1rem solid rgba(0, 0, 0, 0.3);
+    border-radius: 1.5rem;
+    overflow: hidden;
+    position: relative;
+    background-color: white;
+    img{height: 200px; width: 200px;}
+    h3{
+        color: black;
+        font-size: 2.5rem;
+    }
+    button{
+        align-items: center;
+        justify-content: center;
+        margin-top: 1rem;
+        background: $color3;
+        color: #fff;
+        padding: 1rem;
+        font-size: 1.5rem;
+        text-align: center;
+        cursor: pointer;
+        border-radius: 0.5rem;
+        outline: 2px solid $color3;
+        outline-offset: 2px;
+        transition: all .5s;
+        &:hover{
+            background-color: black;
+            color: white;
+            outline: black;
+        }
+    }
+}
+
+.producto--precios{
+    display: flex;
+    justify-content: center;
+    font-size: 2.5rem;
+    color: #333;
+    margin-top: 0.5rem;
+}
+
+.producto--cantidad{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    span{
+        padding: 0 0.7rem;
+        font-size: 1.75rem;
+    }
+    input{
+        border: 0.1rem solid rgba(0, 0, 0, 0.3);
+        font-size: 1.5rem;
+        font-weight: bolder;
+        color: black;
+        padding: 0.5rem;
+        width: 5rem;
+        background: rgba(0, 0, 0, 0.05);
+        text-align: center;
     }
 }
 
@@ -282,4 +400,17 @@ $font2: 'Courier New', Courier, monospace;
     text-align: center;
     font-size: 20pxpx;
     font-weight: bold;
+}
+
+@media screen and (max-width: 992px) {
+    .tarjetas--contenedor {
+        grid-template-columns: auto;
+        background-color: $color2;
+    }
+    .tarjetas{
+        margin-top: 0px;
+    }
+    .tarjeta--a{
+        margin-top: -125px;
+    }
 }
