--- a/estilos.css
+++ b/estilos.css
@@ -253,9 +253,11 @@
 }
 
 .productos--contendor {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
   gap: 1.5rem;
+  grid-auto-flow: row;
   padding: 0.5rem 7%;
 }
 
@@ -480,6 +482,10 @@
 }
 
 @media screen and (max-width: 992px) {
+  .productos--contendor {
+    grid-template-columns: auto;
+  }
+
   .tarjetas--contenedor {
     grid-template-columns: auto;
     background-color: #253a42;
