--- a/estilos.css
+++ b/estilos.css
@@ -279,6 +279,7 @@
   overflow: hidden;
   position: relative;
   background-color: white;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 .producto--ind img {
   height: 200px;
