--- a/estilos.scss
+++ b/estilos.scss
@@ -289,6 +289,7 @@ $font2: 'Courier New', Courier, monospace;
     overflow: hidden;
     position: relative;
     background-color: white;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     img{height: 200px; width: 200px;}
     h3{
         color: black;
