sumando contenido al sitio

--- a/estilos.css
+++ b/estilos.css
@@ -254,7 +254,7 @@
 
 .productos--contendor {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   gap: 1.5rem;
   grid-auto-flow: row;
@@ -482,9 +482,14 @@
   font-weight: bold;
 }
 
+@media screen and (max-width: 1200px) {
+  .productos--contendor {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
 @media screen and (max-width: 992px) {
   .productos--contendor {
-    grid-template-columns: auto;
+    grid-template-columns: 1fr 1fr;
   }
 
   .tarjetas--contenedor {
@@ -504,6 +509,11 @@
     grid-template-columns: auto;
     grid-template-rows: repeat(4, auto);
     grid-template-areas: "galeria--img1" "galeria--p1" "galeria--p2" "galeria--img2";
+  }
+}
+@media screen and (max-width: 576px) {
+  .productos--contendor {
+    grid-template-columns: auto;
   }
 }
 
