--- a/estilos.css
+++ b/estilos.css
@@ -97,6 +97,17 @@
   padding: 2rem 2%;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
+.header--nav li a {
+  position: relative;
+  letter-spacing: 0.125rem;
+  padding: 0.5rem 1.5rem;
+  border-radius: 0.5rem;
+  transition: all 0.4s;
+}
+.header--nav li a:hover {
+  background: #8f4646;
+  color: #fff;
+}
 
 .nav--visible {
   display: flex;
@@ -137,44 +148,29 @@
   animation-delay: 1s;
 }
 
-.nav--visible li a, .nav--registro li a {
-  padding: 1rem 0;
-  margin: 0 3rem;
-  position: relative;
-  letter-spacing: 0.125rem;
-}
-.nav--visible li a:hover, .nav--registro li a:hover {
-  font-weight: bold;
-  color: #8f4646;
-  transition: all 0.5s;
-}
-.nav--visible li a:hover::before, .nav--visible li a:hover::after, .nav--registro li a:hover::before, .nav--registro li a:hover::after {
-  transform: scaleX(1);
-}
-.nav--visible li a::before, .nav--visible li a::after, .nav--registro li a::before, .nav--registro li a::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 0.031rem;
-  background-color: #8f4646;
-  left: 0;
-  transform: scaleX(0);
-  transition: all 0.5s;
-}
-.nav--visible li a::before, .nav--registro li a::before {
-  top: 0;
-  transform-origin: left;
-}
-.nav--visible li a::after, .nav--registro li a::after {
-  bottom: 0;
-  transform-origin: right;
-}
-
 .main {
   grid-area: "main";
   width: 100%;
   height: auto;
   background-color: #ecdcbe;
+}
+
+.carrito-fixed {
+  position: fixed;
+  z-index: 2;
+  right: 1%;
+  top: 50%;
+  font-size: 30px;
+  padding: 10px;
+  border: 2px dashed black;
+  border-radius: 50%;
+  background-color: #ec9c75;
+  transform: translateX(100rem);
+  animation: slideIn 1s forwards;
+}
+.carrito-fixed:hover {
+  font-size: 40px;
+  transition: all 0.5s;
 }
 
 .banner {
@@ -250,6 +246,30 @@
 .tarjetas p {
   font-size: 1.25rem;
   margin: 0.625rem;
+}
+
+.botones--contendor {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 1rem 5%;
+  justify-content: center;
+}
+.botones--contendor button {
+  margin-top: 1rem;
+  padding: 1rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+  border-radius: 0.5rem;
+  background-image: linear-gradient(50deg, #e48f65 50%, transparent 50%);
+  background-position: 100%;
+  background-size: 250%;
+  border-color: #e48f65;
+  text-shadow: 1px 1px 1px black;
+  transition: all 0.5s ease-in-out;
+}
+.botones--contendor button:hover {
+  background-position: 0;
 }
 
 .productos--contendor {
