--- a/estilos.scss
+++ b/estilos.scss
@@ -114,6 +114,17 @@ $font2: 'Courier New', Courier, monospace;
     justify-content: space-between;
     padding: 2rem 2%;
     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 10%);
+    li a{
+        position: relative;
+        letter-spacing: 0.125rem;
+        padding: 0.5rem 1.5rem;
+        border-radius: 0.5rem;
+        transition: all .4s;
+        &:hover{
+            background: $color4;
+            color: #fff;
+        }
+    }
 }
 
 .nav--visible{
@@ -141,43 +152,33 @@ $font2: 'Courier New', Courier, monospace;
     }
 }
 
-.nav--visible li a, .nav--registro li a{
-    padding: 1rem 0;
-    margin: 0 3rem;
-    position: relative;
-    letter-spacing: 0.125rem;
-    &:hover{
-        font-weight: bold;
-        color: $color4;
-        transition: all .5s;
-        &::before, &::after{transform: scaleX(1);}
-    }
-    &::before, &::after{
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 0.031rem;
-        background-color: $color4;
-        left: 0;
-        transform: scaleX(0);
-        transition: all .5s;
-    }
-    &::before{
-        top: 0;
-        transform-origin: left;
-    }
-    &::after {
-        bottom: 0;
-        transform-origin: right;
-    }
-}
-
 // MAIN
+
 .main{
     grid-area: "main";
     width: 100%;
     height: auto;
     background-color: $color3;
+}
+
+// CARRITO-FIXED
+
+.carrito-fixed{
+    position: fixed;
+    z-index: 2;
+    right: 1%;
+    top: 50%;
+    font-size: 30px;
+    padding: 10px;
+    border: 2px dashed black;
+    border-radius: 50%;
+    background-color: $color6;
+    transform: translateX(100rem);
+    animation: slideIn 1s forwards;
+    &:hover{
+        font-size: 40px;
+        transition: all .5s;
+    }
 }
 
 // BANNER-PARALLAX
@@ -257,6 +258,32 @@ $font2: 'Courier New', Courier, monospace;
     p{
         font-size: 1.25rem;
         margin: 0.625rem;
+    }
+}
+
+// BOTONES
+
+.botones--contendor{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding: 1rem 5%;
+    justify-content: center;
+    button{
+        margin-top: 1rem;
+        padding: 1rem;
+        font-size: 1.5rem;
+        cursor: pointer;
+        border-radius: 0.5rem;
+        background-image: linear-gradient(50deg, $color1 50%, transparent 50%);
+        background-position: 100%;
+        background-size: 250%;
+        border-color: $color1;
+        text-shadow: 1px 1px 1px black; 
+        transition: all 0.5s ease-in-out;
+        &:hover{
+            background-position: 0;
+        }
     }
 }
 
