--- a/estilos.css
+++ b/estilos.css
@@ -96,6 +96,7 @@
   justify-content: space-between;
   padding: 2rem 2%;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  font-weight: bold;
 }
 .header--nav li a {
   position: relative;
@@ -162,7 +163,7 @@
   top: 50%;
   font-size: 30px;
   padding: 10px;
-  border: 2px dashed black;
+  border: 2px solid black;
   border-radius: 50%;
   background-color: #ec9c75;
   transform: translateX(100rem);
@@ -205,6 +206,7 @@
   color: white;
   border-radius: 50px;
   font-size: 0.9rem;
+  font-weight: bold;
   transform: all 1s ease-out;
 }
 .banner--descripcion a:hover {
@@ -314,19 +316,22 @@
   justify-content: center;
   margin-top: 1rem;
   background: #ecdcbe;
-  color: #fff;
+  color: #8f4646;
   padding: 1rem;
   font-size: 1.5rem;
+  font-weight: bold;
   text-align: center;
   cursor: pointer;
   border-radius: 0.5rem;
+  border-color: #ecdcbe;
   outline: 2px solid #ecdcbe;
   outline-offset: 2px;
   transition: all 0.5s;
 }
 .producto--ind button:hover {
-  background-color: black;
-  color: white;
+  background-color: #8f4646;
+  border-color: #8f4646;
+  color: #ecdcbe;
   outline: black;
 }
 
