--- a/estilos.scss
+++ b/estilos.scss
@@ -403,7 +403,6 @@ $font2: 'Courier New', Courier, monospace;
         filter: brightness(75%);
         &:hover{
             filter: brightness(100%);
-            transform: translateY(-0.125rem) scale(1.02);
             transition: all 0.5s ease-in-out;
         }
     }
@@ -412,7 +411,7 @@ $font2: 'Courier New', Courier, monospace;
 .galeria--p1 { 
     grid-area: "galeria--p1"; 
     background-color: $color4;
-    padding: 2rem;
+    padding: 5rem;
     border: 0.125rem solid white;
     h3{
         color: white;
@@ -428,42 +427,6 @@ $font2: 'Courier New', Courier, monospace;
         line-height: 2.5rem;
     }
 }
-
-.galeria--p2 { 
-    grid-area: "galeria--p2"; 
-    background-color: $color4;
-    padding: 2rem;
-    border: 0.125rem solid white;
-    h3{
-        color: white;
-        font-size: 3rem;
-        text-align: center;
-        text-decoration: underline;
-        margin-bottom: 1rem;
-    }
-    p{
-        color: white;
-        font-size: 1.5rem;
-        line-height: 2.5rem;
-    }
-}
-
-.galeria--img2 { 
-    grid-area: "galeria--img2";
-    img{
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-        border: 0.125rem solid white;
-        filter: brightness(75%);
-        &:hover{
-            filter: brightness(100%);
-            transform: translateY(-0.125rem) scale(1.02);
-            transition: all 0.5s ease-in-out;
-        }
-    }
-}
-
 
 // FOOTER
 .footer{
@@ -558,6 +521,6 @@ $font2: 'Courier New', Courier, monospace;
 
 @media screen and (max-width: 576px) {
     .productos--contendor{
-        grid-template-columns: auto;
+        grid-template-columns: 1fr 1fr;
     }
 }
