--- a/estilos.css
+++ b/estilos.css
@@ -93,7 +93,7 @@
   display: flex;
   background-color: #ec9c75;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 2rem 2%;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   font-weight: bold;
@@ -131,24 +131,6 @@
   animation-delay: 1.5s;
 }
 
-.nav--registro {
-  display: flex;
-}
-.nav--registro li {
-  list-style: none;
-  transform: translateX(100rem);
-  animation: slideIn 0.5s forwards;
-}
-.nav--registro li:nth-child(1) {
-  animation-delay: 0s;
-}
-.nav--registro li:nth-child(2) {
-  animation-delay: 0.5s;
-}
-.nav--registro li:nth-child(3) {
-  animation-delay: 1s;
-}
-
 .main {
   grid-area: "main";
   width: 100%;
@@ -160,7 +142,7 @@
   position: fixed;
   z-index: 2;
   right: 1%;
-  top: 50%;
+  top: 85%;
   font-size: 30px;
   padding: 10px;
   border: 2px solid black;
