--- a/estilos.scss
+++ b/estilos.scss
@@ -111,7 +111,7 @@ $font2: 'Courier New', Courier, monospace;
     display: flex;
     background-color: $color6;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 2rem 2%;
     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 10%);
     font-weight: bold;
@@ -141,18 +141,6 @@ $font2: 'Courier New', Courier, monospace;
     }
 }
 
-.nav--registro{
-    display: flex;
-    li{
-        list-style: none;
-        transform: translateX(100rem);
-        animation: slideIn .5s forwards;
-        &:nth-child(1){animation-delay: 0s;}
-        &:nth-child(2){animation-delay: .5s;}
-        &:nth-child(3){animation-delay: 1s;}
-    }
-}
-
 // MAIN
 
 .main{
@@ -168,7 +156,7 @@ $font2: 'Courier New', Courier, monospace;
     position: fixed;
     z-index: 2;
     right: 1%;
-    top: 50%;
+    top: 85%;
     font-size: 30px;
     padding: 10px;
     border: 2px solid black;
