--- a/estilos.scss
+++ b/estilos.scss
@@ -307,7 +307,11 @@ $font2: 'Courier New', Courier, monospace;
     position: relative;
     background-color: white;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    img{height: 200px; width: 200px;}
+    img{
+        height: 200px;
+        width: 200px;
+        margin-bottom: 0.5rem;
+    }
     h3{
         color: black;
         font-size: 2.5rem;
@@ -341,27 +345,6 @@ $font2: 'Courier New', Courier, monospace;
     font-size: 2.5rem;
     font-weight: bold;
     color: #333;
-    margin-top: 0.5rem;
-}
-
-.producto--cantidad{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    span{
-        padding: 0 0.7rem;
-        font-size: 1.75rem;
-    }
-    input{
-        border: 0.1rem solid rgba(0, 0, 0, 0.3);
-        font-size: 1.5rem;
-        font-weight: bolder;
-        color: black;
-        padding: 0.5rem;
-        width: 5rem;
-        background: rgba(0, 0, 0, 0.05);
-        text-align: center;
-    }
 }
 
 // GALERIA
@@ -497,17 +480,30 @@ $font2: 'Courier New', Courier, monospace;
     }
     .galeria{
         grid-template-columns: auto;
-        grid-template-rows: repeat(4, auto);
+        grid-template-rows: repeat(2, auto);
         grid-template-areas:
         "galeria--img1"
-        "galeria--p1"
-        "galeria--p2"
-        "galeria--img2";
+        "galeria--p1";
     }
 }
 
 @media screen and (max-width: 576px) {
     .productos--contenedor{
         grid-template-columns: 1fr 1fr;
+    }
+    .producto--ind{
+        img {
+            height: 125px;
+            width: 120px;
+        }
+        h3{
+            font-size: 1.5rem;
+        }
+        button{
+            font-size: 1rem;
+        }
+    }
+    .producto--precios {
+        font-size: 1.5rem;
     }
 }
