--- a/estilos.scss
+++ b/estilos.scss
@@ -145,6 +145,20 @@ $font2: 'Courier New', Courier, monospace;
     }
 }
 
+// CARRITO
+
+.carrito{
+    font-size: 30px;
+    padding: 10px;
+    background-color: $color1;
+    transform: translateY(-100rem);
+    animation: slideIn 1s forwards;
+    &:hover{
+        font-size: 35px;
+        transition: all .5s;
+    }
+}
+
 // MAIN
 
 .main{
@@ -152,26 +166,6 @@ $font2: 'Courier New', Courier, monospace;
     width: 100%;
     height: auto;
     background-color: $color3;
-}
-
-// CARRITO-FIXED
-
-.carrito-fixed{
-    position: fixed;
-    z-index: 2;
-    right: 1%;
-    top: 85%;
-    font-size: 30px;
-    padding: 10px;
-    border: 2px solid black;
-    border-radius: 50%;
-    background-color: $color1;
-    transform: translateX(100rem);
-    animation: slideIn 1s forwards;
-    &:hover{
-        font-size: 40px;
-        transition: all .5s;
-    }
 }
 
 // BANNER-PARALLAX
@@ -530,6 +524,10 @@ $font2: 'Courier New', Courier, monospace;
 }
 
 @media screen and (max-width: 576px) {
+    .header{
+        justify-content: space-evenly;
+        padding: 0.5rem 2%;
+    }
     .productos--contenedor{
         grid-template-columns: 1fr 1fr;
     }
