--- a/estilos.scss
+++ b/estilos.scss
@@ -22,10 +22,10 @@ $font2: 'Courier New', Courier, monospace;
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    color: #000;
+    box-sizing: border-box !important;
+    color: #000 !important;
     a{
-        text-decoration: none;
+        text-decoration: none !important;
     }
 }
 
@@ -121,6 +121,7 @@ $font2: 'Courier New', Courier, monospace;
     justify-content: center;
     padding: 2rem 2%;
     font-weight: bold;
+    margin: 0 !important;
     li a{
         position: relative;
         letter-spacing: 0.125rem;
@@ -129,7 +130,7 @@ $font2: 'Courier New', Courier, monospace;
         transition: all .4s;
         &:hover{
             background: $color4;
-            color: #fff;
+            color: #fff !important;
         }
     }
 }
@@ -137,7 +138,7 @@ $font2: 'Courier New', Courier, monospace;
 .nav--animaciones{
     li{
         list-style: none;
-        transform: translateX(100rem);
+        transform: translateY(-100rem);
         animation: slideIn .5s forwards;
         &:nth-child(1){animation-delay: 0s;}
         &:nth-child(2){animation-delay: .5s;}
@@ -154,7 +155,7 @@ $font2: 'Courier New', Courier, monospace;
     transform: translateY(-100rem);
     animation: slideIn 1s forwards;
     &:hover{
-        font-size: 35px;
+        font-size: 32px;
         transition: all .5s;
     }
 }
@@ -290,7 +291,7 @@ $font2: 'Courier New', Courier, monospace;
     font-size: 5rem;
     padding: 1rem;
     span{
-        color: $color5;
+        color: $color5 !important;
     }
 }
 
@@ -322,23 +323,23 @@ $font2: 'Courier New', Courier, monospace;
         align-items: center;
         justify-content: center;
         margin-top: 1rem;
-        background: $color3;
-        color: $color4;
+        background: $color3 !important;
+        color: $color4 !important;
         padding: 1rem;
         font-size: 1.5rem;
         font-weight: bold;
         text-align: center;
         cursor: pointer;
         border-radius: 0.5rem;
-        border-color: $color3;
-        outline: 2px solid $color3;
+        border-color: $color3 !important;
+        outline: 2px solid $color3 !important;
         outline-offset: 2px;
         transition: all .5s;
         &:hover{
-            background-color: $color4;
-            border-color: $color4;
-            color: $color3;
-            outline: black;
+            background-color: $color4 !important;
+            border-color: $color4 !important; 
+            color: $color3 !important;
+            outline: black !important;
         }
     }
 }
@@ -347,6 +348,33 @@ $font2: 'Courier New', Courier, monospace;
     font-size: 2.5rem;
     font-weight: bold;
     color: #333;
+}
+
+// CARRITO 
+
+.shopping-cart-items {
+    padding: 20px 0px;
+}
+
+.shopping-cart-header {
+    border-bottom: 1px solid #ccc;
+}
+
+.shopping-cart-image {
+    max-width: 80px;
+    border-radius: 20px;
+}
+
+.shopping-cart-quantity-input {
+    max-width: 45px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background: #eee;
+    padding: 5px;
+}
+
+.shopping-cart-total {
+    min-height: 96px;
 }
 
 // GALERIA
@@ -385,7 +413,7 @@ $font2: 'Courier New', Courier, monospace;
     padding: 5rem;
     border: 0.125rem solid white;
     h3{
-        color: white;
+        color: white !important;
         font-size: 3rem;
         text-align: center;
         text-decoration: underline;
@@ -393,7 +421,7 @@ $font2: 'Courier New', Courier, monospace;
         margin-bottom: 1rem;
     }
     p{
-        color: white;
+        color: white !important;
         font-size: 1.5rem;
         line-height: 2.5rem;
     }
@@ -412,14 +440,13 @@ $font2: 'Courier New', Courier, monospace;
 .social{
     text-align: center;
     padding-bottom: 25px;
-    color: #4b4c4d;
+    color: #4b4c4d !important;
     a{
         font-size: 24px;
         color: inherit;
         border: 2px solid white;
         width: 40px;
         height: 40px;
-        line-height: 38px;
         display: inline-block;
         text-align: center;
         border-radius: 50%;
