--- a/estilos.scss
+++ b/estilos.scss
@@ -50,8 +50,8 @@ $font2: 'Courier New', Courier, monospace;
     font-family: $font1;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem 7%;
+    justify-content: space-between !important;
+    padding: 0.5rem 7% !important;
     text-transform: uppercase;
     position: fixed;
     z-index: 5;
@@ -71,7 +71,7 @@ $font2: 'Courier New', Courier, monospace;
     transform: translateY(-100rem);
     animation: slideIn 1s forwards;
     span{
-        color: $color4;
+        color: $color4 !important;
     }
     &:hover{
         &::before, &::after{
@@ -121,7 +121,7 @@ $font2: 'Courier New', Courier, monospace;
     justify-content: center;
     padding: 2rem 2%;
     font-weight: bold;
-    margin: 0 !important;
+    margin: 0;
     li a{
         position: relative;
         letter-spacing: 0.125rem;
@@ -151,6 +151,7 @@ $font2: 'Courier New', Courier, monospace;
 .carrito{
     font-size: 30px;
     padding: 10px;
+    line-height: 50px;
     background-color: $color1;
     transform: translateY(-100rem);
     animation: slideIn 1s forwards;
@@ -189,7 +190,7 @@ $font2: 'Courier New', Courier, monospace;
     margin: auto;
     p{
         margin: 2rem 0 3rem 0;
-        color: white;
+        color: white !important;
         font-size: 1.2rem;
         font-weight: bold;
         text-transform: uppercase;
@@ -198,15 +199,15 @@ $font2: 'Courier New', Courier, monospace;
         border: 2px solid rgba(255, 255, 255, 1);
         padding: 0.6rem 3.5rem;
         margin: auto;
-        opacity: 0.85;
-        color: white;
+        opacity: 0.85 !important;
+        color: white !important;
         border-radius: 50px;
         font-size: 0.9rem;
         font-weight: bold;
         transform: all 1s ease-out;
         &:hover{
             background: white;
-            color: black;
+            color: black !important;
             opacity: 1;
             box-shadow: 0rem 0.313rem 0.625rem 0.125rem rgba(0, 0, 0, 0.9);
         }
@@ -216,7 +217,7 @@ $font2: 'Courier New', Courier, monospace;
         font-style: italic;
         font-weight: bold;
         text-transform: uppercase;
-        color: white;
+        color: white !important;
     }
 }
 
@@ -443,7 +444,7 @@ $font2: 'Courier New', Courier, monospace;
     color: #4b4c4d !important;
     a{
         font-size: 24px;
-        color: inherit;
+        color: inherit !important;
         border: 2px solid white;
         width: 40px;
         height: 40px;
@@ -474,7 +475,7 @@ $font2: 'Courier New', Courier, monospace;
         padding: 0 15px;
     }
     a{
-        color: inherit;
+        color: inherit !important;
         opacity: 0.8;
         &:hover{opacity: 1;}
     }
@@ -485,6 +486,9 @@ $font2: 'Courier New', Courier, monospace;
     text-align: center;
     font-size: 1.2rem;
     font-weight: bold;
+    small{
+        font-weight: 500;
+    }
 }
 
 // MEDIA QUERIES
@@ -519,6 +523,9 @@ $font2: 'Courier New', Courier, monospace;
 }
 
 @media screen and (max-width: 768px){
+    .header{
+        justify-content: space-around !important;
+    }
     .nav--hamburguesa {
         display: block;
     }
@@ -530,6 +537,7 @@ $font2: 'Courier New', Courier, monospace;
         top: 65px;
         left: -100%;
         margin: 0;
+        line-height: 50px;
         text-align: center;
         align-items: center;
         transition: all .5s;
@@ -541,12 +549,20 @@ $font2: 'Courier New', Courier, monospace;
             display: block;
             a{
                 font-size: 1.2rem;
-                color: $color4;
+                color: $color4 !important;
             }
         }
     }
     #menu:checked ~ ul {
         left: 0;
+    }
+    .banner--descripcion{
+        h2{
+            background-color: rgba(0,0,0,0.20);
+        }
+        p{
+            background-color: rgba(0,0,0,0.20);
+        }
     }
 }
 
